--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ html, body {
 
 .main-nav {
     text-align: right;
-    font-size: 1.5em;
+    font-size: 1.5vw;
 }
 
 .main-nav li {
@@ -41,7 +41,7 @@ html, body {
 display: flex;
 justify-content: space-between;
 align-items: baseline;
-font-size: 1em;
+font-size: 1vw;
   background-color: #ffffff;
   color: #D64CEE;
   padding: 1rem;
@@ -53,7 +53,7 @@ font-size: 1em;
 }
 
 .top-manga {
-    font-size: 2em;
+    font-size: 2vw;
     text-align: left;
     left: 10%;
     padding: 0 2em;
@@ -133,7 +133,7 @@ li::marker {
 .socials {
 
     transform: translate(-50%, -50%);
-    font-size: 1.5em;
+    font-size: 1.5vw;
     text-decoration: none;
     justify-content: space-between;
     display: inline-flex;
@@ -237,14 +237,23 @@ li::marker {
     top: 50%;
     left: 70%;
     transform: translate(-50%, -50%);
+    color: #ffffff;
+    font-size: 1.25vw;
     width: 500px;
     height: 500px;
-    color: #ffffff;
-    font-size: 1.5em;
+    
+}
+
+.image-passage img {
+    object-fit: contain;
+    
+    
+
 }
 
 .vinland {
     border-radius: 25px;
+    
 }
 
 .head2 {
