--- a/styles.css
+++ b/styles.css
@@ -75,8 +75,8 @@ font-size: 1vw;
 }
 
 .container2 {
-    position: relative;
-    text-align: center;
+    /*position: relative;
+    text-align: center;*/
     width: 100%;
     height: 750px;
     margin: 0%;
@@ -223,10 +223,10 @@ li::marker {
     position: absolute;
     text-align: left;
     top: 50%;
-    left: 5%;
+    left: 15%;
     transform: translate(-50%, -50%);
     font-size: 1.25vw;
-    margin-left: 0px;
+    margin-left: 100px;
     margin-right: 1000px;
     padding: 0px;
     color: #ffffff;
@@ -275,7 +275,7 @@ li::marker {
 .centered-right {
     position: absolute;
     top: 45%;
-    left: 85%;
+    left: 80%;
     transform: translate( 10%, 0%);
     font-size: 1.5vw;
 }
