--- a/styles.css
+++ b/styles.css
@@ -75,11 +75,10 @@ font-size: 1vw;
 }
 
 .container2 {
-    /*position: relative;
-    text-align: center;*/
+    position: relative;
+    text-align: center;
     width: 100%;
     height: 750px;
-    margin: 0%;
     transform: translate( 10%, 0%);
     
 }
@@ -220,7 +219,7 @@ li::marker {
 }
 
 .whatispassage {
-    position: relative;
+    position: absolute;
     text-align: left;
     top: 50%;
     left: 5%;
