--- a/styles.css
+++ b/styles.css
@@ -76,10 +76,11 @@ font-size: 1vw;
 
 .container2 {
     position: relative;
-    text-align: center;
     width: 100%;
     height: 750px;
     transform: translate( 10%, 0%);
+    margin: 0%;
+    padding: 0%;
     
 }
     
@@ -222,7 +223,7 @@ li::marker {
     position: absolute;
     text-align: left;
     top: 50%;
-    left: 5%;
+    left: 20%;
     transform: translate(-50%, -50%);
     font-size: 1.25vw;
     margin-left: 100px;
@@ -245,14 +246,10 @@ li::marker {
 
 .image-passage img {
     object-fit: contain;
-    
-    
-
 }
 
 .vinland {
     border-radius: 25px;
-    
 }
 
 .head2 {
