--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ font-size: 1vw;
 
 .container2 {
     position: relative;
+    text-align: left;
     width: 100%;
     height: 750px;
     transform: translate( 10%, 0%);
