i dont even know

--- a/styles.css
+++ b/styles.css
@@ -68,16 +68,17 @@ font-size: 1vw;
     padding: 0%;
     margin: 0%;
 }
-
-.container img {
+*
+.container img{
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
 }
 
 .container2 {
     position: relative;
     text-align: left;
-    width: 100%;
+    width: 90%;
     height: 750px;
     transform: translate( 10%, 0%);
     margin: 0%;
@@ -88,10 +89,11 @@ font-size: 1vw;
 
 .container3 {
     position: relative;
-    text-align: center;
-    width: 100%;
+    text-align: left;
+    width: 90%;
     height: 750px;
     margin: 0%;
+    padding: 0%;
     transform: translate( 10%, 0%);
 }
 
@@ -224,12 +226,14 @@ li::marker {
     position: absolute;
     text-align: left;
     top: 50%;
-    left: 20%;
+    left: 25%;
     transform: translate(-50%, -50%);
     font-size: 1.25vw;
-    margin-left: 100px;
+    margin-left: 50px;
     margin-right: 1000px;
     padding: 0px;
+    width: 1000px;
+    height: 750px;
     color: #ffffff;
 }
 
@@ -245,9 +249,7 @@ li::marker {
     
 }
 
-.image-passage img {
-    object-fit: contain;
-}
+
 
 .vinland {
     border-radius: 25px;
@@ -272,7 +274,7 @@ li::marker {
 .centered-right {
     position: absolute;
     top: 45%;
-    left: 80%;
+    left: 70%;
     transform: translate( 10%, 0%);
     font-size: 1.5vw;
 }
